Attempt to fix signup button on mobile devices

--- a/sass/custom.sass
+++ b/sass/custom.sass
@@ -233,8 +233,7 @@ span.date-more
   .signup
     width: 80px
     float: right
-    margin-right: 0
-    margin-left: 20px
+    margin-left: 10px
   .starred
     background-position: center center
     -webkit-background-size: cover
